Refactor CORS configuration to enhance origin handling and simplify allowed origins logic